<resources>
    <string name="app_name">Yanzukredit</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dash_msg">Get Easy And Accessible Loans</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Home Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="office_address">Office Address</string>
    <string name="employer">Employer</string>
    <string name="bank">Bank</string>
    <string name="bvn">BVN</string>
    <string name="verify">Verify</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="loan_available">Loan Available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_msg">Receive loan in your account \n in less than 5 minutes</string>
    <string name="home">Home</string>
    <string name="loan">Loan</string>
    <string name="pay">Pay</string>
    <string name="preference_file">Yanza_kredit</string>
    <string name="login">logged_in</string>
    <string name="pref_contact">pref_contact</string>
    <string name="pref_contact_list">pref_contact_list</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_address">Email Address</string>
    <string name="no_available_value">No available data</string>
    <string name="total_due">Total Due</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="payback_amount">Payback Amount</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="submit">Submit</string>
    <string name="card_details">Card Details</string>
    <string name="user_id">user id</string>
    <string name="ok">OK</string>
    <string name="pay_all">Pay All Now</string>
    <string name="pay_part">Pay Some Now</string>
    <string name="card_type">Card type</string>
    <string name="card_no">Card Number</string>
    <string name="loan_duration">duration</string>
    <string name="status">status</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="account_type">Account type</string>
    <string name="edit_bank_details">Edit bank details</string>
    <string name="bank_details">Bank details</string>
    <string name="account_name">Account name</string>
    <string name="rejected">Rejected</string>
    <string name="active">Active</string>
    <string name="paid">Paid</string>
    <string name="my_cards">My Cards</string>
    <string name="loan_history">Loan History</string>
    <string name="payback_loan">Payback Loan</string>
    <string name="get_loan">Get Loan</string>
    <string name="token">token</string>
    <string name="get_a_loan_today">Get a loan today</string>
    <string name="take_a_loan">Take a loan</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_your_account_information">Add your account information</string>
    <string name="my_bank">My Banks</string>
    <string name="interest">interest</string>
    <string name="cancel">Cancel</string>
    <string name="loan_limit">loan limit</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dashes">--</string>
    <string name="loan_status">Loan status</string>
    <string name="loan_interest">Loan Interest</string>
    <string name="payback_date">Payback date</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="passwrd_setup">Please fill enter the code sent to you via email/SMS and enter your new password details</string>
    <string name="reset_msg">Please enter a valid Email Address so that a verification code can be sent to you</string>
    <string name="array_gender">array gender</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and conditions</string>
</resources>