<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_loan"
                android:icon="@drawable/pay"
                android:title="@string/get_loan"/>
        <item
                android:id="@+id/nav_payback"
                android:icon="@drawable/ic_payback"
                android:title="@string/payback_loan"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/loan_history"/>


</menu>
