<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:gravity="center"
             tools:context="com.yanza.kredit.fragment.FirstTimeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_first_time"
            android:contentDescription="@string/app_name"/>

    <TextView
    style="@style/TextView_bold"
    android:text="@string/get_a_loan_today"
    android:textColor="#00ABA0"
    android:textSize="24sp"/>
    <TextView
    style="@style/TextView_bold"
    android:textAlignment="center"
    android:layout_marginTop="10dp"
    android:text="@string/first_msg"/>

    <Button
            android:id="@+id/btnLoan"
    style="@style/Button_dark_green"
    android:text="@string/take_a_loan"
    android:layout_margin="20dp"/>
</LinearLayout>