<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yanza.kredit.activity.ForgotPasswordActivity">
<RelativeLayout
    android:id="@+id/linearHead"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_password"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:textSize="18sp"
        android:textColor="@color/green"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/green"/>
</RelativeLayout>
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwrd_setup"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_below="@+id/linearHead"
        android:layout_margin="10sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_margin="10sp">
        <EditText
            android:id="@+id/editCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_verification_code"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/input"
        android:layout_margin="10sp">
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_below="@+id/input1">
        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonReset"
            style="@style/Button_dark_green"
        android:text="@string/reset_password"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:padding="10sp"
        android:layout_below="@+id/input2"/>
    <include layout="@layout/template_progress"/>

</RelativeLayout>