<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.yanza.kredit.activity.LoginActivity">

    <include layout="@layout/layout_bck"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28"/>

    <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <EditText android:id="@+id/editEmail"
                  style="@style/EditText"
                  android:inputType="textEmailAddress"
                  android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/green"
                app:passwordToggleEnabled="true">

            <EditText android:id="@+id/editPassword"
                      style="@style/EditText"
                      android:layout_marginTop="20dp"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:id="@+id/txtForgotPassword"
                style="@style/TextView_small"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textColor="@color/green"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linear"
    app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/btnLogin"
                android:text="@string/log_in"
                style="@style/Button_dark_green"/>
        <TextView
                style="@style/TextView"
                android:text="@string/don_t_have_an_account"
                android:textSize="12sp"
        android:layout_marginTop="10dp"/>

        <TextView
                android:id="@+id/btnRegister"
                android:text="@string/register"
                android:background="@android:color/transparent"
                style="@style/TextView"
                android:layout_gravity="center"
                android:textColor="@color/green"/>
    </LinearLayout>
<include layout="@layout/template_progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>