<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:minHeight="400dp"
    android:minWidth="500dp"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_msg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnSubmit"
            style="@style/Button_dark_green"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>
    <include layout="@layout/template_progress"/>

</LinearLayout>